# python-multi-tenant-auth-template

./: .env.example  .gitignore  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 202604260850_initial_auth_schema.py  202604260900_add_tokens.py  202604260950_add_rbac_tables.py
app/: config.py  database.py  deps.py  main.py
app/middleware/: __init__.py  auth.py  ratelimit.py  tenant.py
app/models/: __init__.py  email_verification_token.py  password_reset_token.py  permission.py  rbac.py  refresh_token.py  role.py  tenant.py  tenant_invitation.py  tenant_member.py  user.py
app/routers/: admin.py  auth.py  health.py  tenant.py
app/schemas/: auth.py  extended_auth.py  rbac.py  tenant.py  user.py
app/services/: __init__.py  audit_service.py  auth_service.py  email_verification_service.py  password_reset_service.py  tenant_service.py  token_service.py
app/utils/: email.py  errors.py  security.py
docker/: Dockerfile
migrations/: 001_create_audit_logs_table.sql
scripts/: wait-for-db.sh
tests/: conftest.py  test_api.sh  test_auth_service.py  test_middleware.py  test_models.py  test_tenant_service.py
