[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-multi-tenant-auth-template"
version = "0.1.0"
description = "FastAPI multi-tenant authentication template"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=3.0.2,<6.0.0",
    "alembic>=1.18.0,<2.0.0",
    "asyncpg>=0.31.0,<1.0.0",
    "bcrypt>=4.1.3,<6.0.0",
    "email-validator>=2.3.0,<3.0.0",
    "fastapi>=0.136.0,<1.0.0",
    "pydantic-settings>=2.14.0,<3.0.0",
    "PyJWT>=2.12.0,<3.0.0",
    "SQLAlchemy>=2.0.49,<3.0.0",
    "structlog>=25.0.0,<26.0.0",
    "uvicorn[standard]>=0.46.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
